fix(home.css): Add min-height to banner for equal sizing through the tabs

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -46,6 +46,7 @@ body {
 .banner img {
   display: block;
   width: 100%;
+  min-height: 944px ;
   object-fit: cover;
   position: relative;
   text-align: center;
