--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Pacifico&display=swap");
 
+/* Body section */
 
+body {
+  background-color: var(--mozzarella-white);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+#content {
+  flex-grow: 1;
+}
 
 /* fixed logo */
 
@@ -19,18 +32,6 @@
   height: 100px;  
   display: block;
 }
-
-/* Body section */
-
-body {
-  background-color: var(--mozzarella-white);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  min-height: 100vh;
-  overflow-y: hidden;
-}
-
 
 /* tabs  */
 
@@ -69,4 +70,13 @@ body {
   color: var(--tomato-red);
   box-shadow: 0 4px 16px rgba(0,0,0,0.12);
   z-index: 2;
+}
+
+/* General Description text styling */
+
+.description {
+  font-family: 'Open Sans', sans-serif;
+  color: var(--charcoal);
+  font-size: 0.9em;
+  line-height: 1.5;
 }
