--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,9 +1,5 @@
-/* Header Section */
-
-/* Banner Section */
-
 .about {
-  background-color: var(--charcoal); /* temporal color */
+  background-color: var(--charcoal); 
   position: relative;
   width: 100%;
   min-height: 944px;
@@ -22,11 +18,11 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin: 75px; /* Clamp? */
+  margin: 75px; 
 }
 
 .contactContainer h1 {
-  font-family: 'Pacifico', cursive; /* Use your special font for item names */
+  font-family: 'Pacifico', cursive; 
   color: var(--tomato-red);
   margin-top: 0;
   margin-bottom: 10px;
